fix: added style rules to prevent horizontal scrollbar on small devices

--- a/src/app/meditation/meditation.component.styl
+++ b/src/app/meditation/meditation.component.styl
@@ -107,3 +107,8 @@ mat-list .meditation-row:last-child mat-divider
     &:last-child
       padding-left: 8px
       font-style: italic
+
+
+// don't add horizontal scrollbar on small screen sizes
+form > mat-form-field
+  min-width: 0
