--- a/src/app/profile/offline-meditation/offline-meditation.styl
+++ b/src/app/profile/offline-meditation/offline-meditation.styl
@@ -17,9 +17,12 @@ form
 
 .meditation-input
   margin-right: 10px
-  min-width: 80px
 
 .error-msg
   color: crimson
   font-weight: bold
   font-size: 0.8em
+
+@media screen and (max-width: 900px)
+  form
+    flex-direction: column
